# Rudrax-CyberSec

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.host-ollama.yml  docker-compose.yml  requirements.txt  server.py  start.sh
.github/workflows/: deploy.yml
app/src/: App.css  App.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  coder.py  deployer.py  orchestrator.py  planner.py  tester.py
backend/app/api/: admin.py  agent.py  auth.py  browser.py  chat.py  deploy.py  files.py  models.py  network.py  osint.py  pentest.py  projects.py  reports.py  soc.py  tasks.py  voice.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/pentest/: scanner.py
backend/app/services/: browser_agent.py  memory_service.py  network_tools.py  ollama_service.py  osint_service.py  report_generator.py  soc_service.py  voice_service.py
deploy/: install.sh  nginx.conf  rudrax-backend.service  update.sh
docs/: RudraX-Installation-Guide.html
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  AgentPage.tsx  BrowserAgentPage.tsx  ChatPage.tsx  DeployPage.tsx  FilesPage.tsx  HistoryPage.tsx  LoginPage.tsx  ModelsPage.tsx  NetworkToolsPage.tsx  OSINTPage.tsx  PentestPage.tsx  ProjectsPage.tsx  ReportsPage.tsx  SOCDashboard.tsx  VoiceAgentPage.tsx
frontend/src/services/: api.ts
